# python-web-fall-2022

./: Readme.md  Task4.md  main.py  pyproject.toml
src/: app.py  domain.py  exceptions.py  logs.py  requests.py  validation.py
src/app/: domain.py  exceptions.py  main.py  models.py  receipt_creator.py  requests.py  validation.py
src/definitions/: service.proto
src/tests/: check_card_test.py  consumption_test.py  integration_test.py  sending_receipt_test.py
