[tool.poetry]
name = "homeworks"
version = "0.1.0"
description = ""
authors = ["vladkash <spanch-kash@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
parameterized = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

